--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
         <title>Phil</title><!--Text displayed in tab-->
     </head>
     <body><!--Content between tags-->
-        <h1>Phil Burkhill</h1>
-        <h2>Junior Developer</h2>
-        <br>
+    <main><header class ="page-header"><h1>Phil Burkhill</h1>
+        <h2>Junior Developer</h2></header>
         <hr>
-        <h3>About Me</h3>
-        <p>For the past couple of years I have been working as an EFL teacher, both in face and online, my role taking me from Italy all the way to Australia. I am currently working with the Manchester Codes bootcamp to give myself a solid foundation to build upon and in the future work professionally in a related role.</p>
-        <p>I've been passionate about computing since I was young, having experimented with programs and languages many times in my younger years, as well as graduating in Software Engineering in 2010.</p>
+        <section>
+            <h3>About Me</h3>
+            <p>For the past couple of years I have been working as an EFL teacher, both in face and online, my role taking me from Italy all the way to Australia. I am currently working with the Manchester Codes bootcamp to give myself a solid foundation to build upon and in the future work professionally in a related role.</p>
+            <p>I've been passionate about computing since I was young, having experimented with programs and languages many times in my younger years, as well as graduating in Software Engineering in 2010.</p>
+        </section>
+        <footer><p>2022 - Phil Burkhill</p></footer>
+    </main>
     </body>
 </html>
