--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
             <p>For the past couple of years I have been working as an EFL teacher, both in face and online, my role taking me from Italy all the way to Australia. I am currently working with the Manchester Codes bootcamp to give myself a solid foundation to build upon and in the future work professionally in a related role.</p>
             <p>I've been passionate about computing since I was young, having experimented with programs and languages many times in my younger years, as well as graduating in Software Engineering in 2010.</p>
         </section>
+        <hr>
+        <section>
+            <h3>Qualities</h3>
+            <ol>
+                <li>Affable.</li>
+                <li>Curious.</li>
+                <li>Determination.</li>
+            </ol>
+            <h3>Hobbies & Interests</h3>
+            <ul>
+                <li>Weightlifting.</li>
+                <li>Watching and playing football.</li>
+                <li>Travelling.</li>
+            </ul>
+        </section>
         <footer><p>2022 - Phil Burkhill</p></footer>
     </main>
     </body>
