images embedded into page.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body><!--Content between tags-->
     <main><header class ="page-header"><h1>Phil Burkhill</h1>
+        <img src="./images/picture.jpeg" alt="Phil Photo">
         <h2>Junior Developer</h2>
         <nav class="page-links"><a href="./pages/projects.html">Current projects</a>
         <a href="./pages/contact.html">Contact me</a></nav>
@@ -13,6 +14,20 @@
     <section>
         <h3>About Me</h3>
         <p>For the past couple of years I have been working as an EFL teacher, both in face and online, my role taking me from Italy all the way to Australia. I am currently working with the Manchester Codes bootcamp to give myself a solid foundation to build upon and in the future work professionally in a related role.</p>
+            <figure>
+                <img src="./images/teacher-phil.png" alt="Phil teacher photo">
+                <br>
+                <figcaption>
+                    One of the many times I have helped young learners improve their English, this particular one being preparation for the TRINITY exam for young learners.
+                </figcaption>
+            </figure>
+            <figure>
+                <img src="./images/italy.png" alt="Phil Italy photo">
+                <br>
+                <figcaption>
+                    I enjoy travelling, this particular picture is from my last night in Cinque Terre, a place I used to go to yearly and hope to do for the first time in two years in 2022.
+                </figcaption>
+            </figure>
         <p>I've been passionate about computing since I was young, having experimented with programs and languages many times in my younger years, as well as graduating in Software Engineering in 2010.</p>
     </section>
         <hr>
