images and projects

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,6 +7,33 @@
         <main>
             <header class ="page-header"><h1>Current Projects</h1>
             </header>
+            <section>
+                <table>
+                    <thead><tr>
+                        <th>Mind Orb</th>
+                        <th>Moisture Harvester</th>
+                        <th>Plasma Rifle</th>
+                    </tr></thead>
+
+                    <tbody><tr>
+                        <td>Used to manipulate weak minded humans.</td>
+                        <td>Turns moisture from the air into drinkable water.</td>
+                        <td>High powered rifle that uses plasma as ammunition.</td>
+                    </tr>
+                    <tr>
+                        <td><img src="./images/mindorb.png"></td>
+                        <td><img src="./images/moisture-harvester.png" alt="Phil Italy photo"></td>
+                        <td><img src="./images/plasma-rifle.png" alt="Phil Italy photo"></td>
+                    </tr>
+
+                    <tr>
+                        <td>Found upon the corpse of one of the recovered interlopers.<br>Currently beyond research capabilities.</td>
+                        <td>Reverse engineered technology.<br>Could revolutionise water reclamation.</td>
+                        <td>Highly volatile explosive.<br>Most powerful infantry weapons recovered.</td>
+                    </tr></tbody>
+                </table>
+                
+            </section>
         <footer><p>2022 - Phil Burkhill</p></footer>
     </main>
     </body>
