--- a/pages/projects.html
+++ b/pages/projects.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Projects</title>
+        
     </head>
     <body>
         <main>
@@ -21,9 +22,9 @@
                         <td>High powered rifle that uses plasma as ammunition.</td>
                     </tr>
                     <tr>
-                        <td><img src="./images/mindorb.png"></td>
-                        <td><img src="./images/moisture-harvester.png" alt="Phil Italy photo"></td>
-                        <td><img src="./images/plasma-rifle.png" alt="Phil Italy photo"></td>
+                        <td><img src="../images/mindorb.png"></td>
+                        <td><img src="../images/moisture-harvester.png" alt="Phil Italy photo"></td>
+                        <td><img src="../images/plasma-rifle.png" alt="Phil Italy photo"></td>
                     </tr>
 
                     <tr>
