--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body><!--Content between tags-->
     <main><header class ="page-header"><h1>Phil Burkhill</h1>
-        <img src="./images/picture.jpeg" alt="Phil Photo">
+        <img src="./images/developer-phil.png" alt="Phil Photo">
         <h2>Junior Developer</h2>
         <nav class="page-links"><a href="./pages/projects.html">Current projects</a>
         <a href="./pages/contact.html">Contact me</a></nav>
