--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,8 +5,39 @@
     </head>
     <body>
         <main>
-            <header class ="page-header"><h1>Contact Information</h1>
+            <header class ="page-header"><h1>Contact Me</h1>
             </header>
+            <section>
+                <fieldset>
+                    <legend>Personal Details: </legend>
+                    <label>
+                        Your Name
+                        <input type="text" name="name" />
+                    </label>
+                    <label>
+                        Your Email
+                        <input type="text" name="email" />
+                    </label>
+                </fieldset>
+                <br>
+                <fieldset>
+                    <legend>Reason for contacting</legend>
+                    <label>
+                        <p>Select One</p>
+                        <select name="device">
+                            <option value="alienTech" selected>Alien technology query</option>
+                            <option value="publicSpeaking">Speaking engagement</option>
+                            <option value="anonTip">Anonymous Tip</option>
+                        </select>
+                    </label>
+                    <label>
+                        <p>Further Information</p>
+                        <input type="text" name="furtherInfo" />
+                        <br><br>
+                        <input type="submit" name="submit" value="Submit" />
+                    </label>
+                </fieldset>
+            </section>
         <footer><p>2022 - Phil Burkhill</p></footer>
     </main>
     </body>
