CSS first complete

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html><!--Tells the browser what version of HTML to use-->
-<html><!--TEll the browser everything enclosed is HTML-->
-    <head><!--Instructions for the browser-->
-        <title>Phil</title><!--Text displayed in tab-->
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+        <title>Phil</title>
     </head>
-    <body><!--Content between tags-->
-    <main><header class ="page-header"><h1>Phil Burkhill</h1>
+    <body>
+    <main><header class ="page-header">
+        <h1>Phil Burkhill</h1>
         <img src="./images/developer-phil.png" alt="Phil Photo">
         <h2>Junior Developer</h2>
         <nav class="page-links"><a href="./pages/projects.html">Current projects</a>
