--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html5>
 <html>
     <head>
-        <title>Main Page</title>
+        <title>Projects</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -17,19 +17,11 @@
             <a id="twitter" href="https://www.instagram.com/pburkhill/"><img id="social-icon" src="./images/insta-logo.png" class ="grow" title="instagram"/></a>
             <a id="twitter" href="https://github.com/philyb1701"><img id="social-icon" src="./images/git-logo.png" class ="grow"title="github"/></a>
         </div>
-        <div class="body-square">            
-            <div class="body-content">
-            <p>Hello world</p>
-            <p>This is my first portfolio website! Click on one of the buttons in the side bar to take you to your desired place!</p>
-            <p>But please give me a little pat on the head before you go exploring, I'm looking a little down.</p>
-            </div>
-            <div class="figure">
-            <img class="image-main" src="./images/phil-sad.jpg" data-src="./images/phil-sad.jpg">
-            <img class="image-hover" src="./images/phil-happy.jpg" data-src="./images/phil-happy.jpg">
-            </div>
+        <div class="body-square">
+        <div class="body-content">
+        <h1>Project 1 - Portfolio</h1>
+        <p>You're looking at it!</p>
+        </div>
         </div>
     </body>
-    <footer>
-
-    </footer>
 </html>
