--- a/test.html
+++ b/test.html
@@ -9,5 +9,20 @@
 <h1>This is a heading</h1>
 <p>This is a paragraph.</p>
 
+<div id=“socials”>
+    <h3>My Socials</h3>
+        <p>Follow me on <a href="https://bbc.com">Twitter</a>!</p>
+        <p> Follow me on <a href="https://bbc.com">Instagram</a>!</p>
+        <input type="checkbox" id="box" name="test-checkbox" checked>
+        <label for="test-checkbox">Check this box for some reason</label>
+        <button disabled>You can't press this...</button>
+</div>
+
+<div>
+    <a href="facebook.com" data-anchor="social">Facebook</a>
+    <a href="instagram.com" data-anchor="social">Instagram</a>
+    <a href="#top" data-anchor="innerLink">
+</div>
+
 </body>
 </html>
